--- a/net.stickycode.component/sticky-component-cxf/pom.xml
+++ b/net.stickycode.component/sticky-component-cxf/pom.xml
@@ -1,60 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-/**
- * Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved.
- *
- * This program is licensed to you under the Apache License Version 2.0,
- * and you may not use this file except in compliance with the Apache License Version 2.0.
- * You may obtain a copy of the Apache License Version 2.0 at http://www.apache.org/licenses/LICENSE-2.0.
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the Apache License Version 2.0 is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the Apache License Version 2.0 for the specific language governing permissions and limitations there under.
- */
- -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!-- Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-jar</artifactId>
-		<version>1.5</version>
+		<version>1.15</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>net.stickycode.component</groupId>
 	<artifactId>sticky-component-cxf</artifactId>
-	<version>1.5-SNAPSHOT</version>
+	<version>2.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>sticky-component-cxf</name>
 	<description>Class, Field and Method metadata used to remove boilerplate code for construction, configuration, scheduling, 
 monitoring, management and more</description>
+	<url>http://www.StickyCode.net/component/sticky-component-cxf/</url>
+	<inceptionYear>2009</inceptionYear>
 
-	<inceptionYear>2010</inceptionYear>
+	<scm>
+		<connection>scm:svn:http://stickycode.googlecode.com/svn/trunk/net.stickycode.component/sticky-component-cxf</connection>
+		<developerConnection>scm:svn:https://stickycode.googlecode.com/svn/trunk/net.stickycode.component/sticky-component-cxf</developerConnection>
+		<url>http://code.google.com/p/stickycode/source/browse/#svn/trunk/net.stickycode.component/sticky-component-cxf</url>
+	</scm>
+
 	<dependencies>
 		<dependency>
-			<groupId>net.stickycode.composite</groupId>
-			<artifactId>sticky-composite-cxf-soap</artifactId>
-			<version>[1,2)</version>
-		</dependency>
-		<dependency>
 			<groupId>net.stickycode.mockwire</groupId>
-			<artifactId>mockwire-spring25</artifactId>
-			<version>[1,2)</version>
-			<type>jar</type>
+			<artifactId>mockwire-spring30</artifactId>
+			<version>[4.2,5)</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
 			<version>[1.6.0]</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.stickycode.composite</groupId>
+			<artifactId>sticky-composite-cxf-soap</artifactId>
+			<version>[3.1,4)</version>
+		</dependency>
+		<dependency>
 			<groupId>net.stickycode</groupId>
 			<artifactId>sticky-stereotype</artifactId>
-			<version>[1,2)</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>[1.5,2)</version>
+		</dependency>
+		<dependency>
+			<groupId>net.stickycode</groupId>
+			<artifactId>sticky-exception</artifactId>
+			<version>[1.6,2)</version>
 		</dependency>
 	</dependencies>
 </project>
