--- a/trunk/net.stickycode.component/sticky-component-cxf/pom.xml
+++ b/trunk/net.stickycode.component/sticky-component-cxf/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>net.stickycode.component</groupId>
 	<artifactId>sticky-component-cxf</artifactId>
-	<version>2.2-SNAPSHOT</version>
+	<version>2.2</version>
 	<packaging>jar</packaging>
 
 	<name>sticky-component-cxf</name>
@@ -20,9 +20,9 @@ monitoring, management and more</description>
 	<inceptionYear>2009</inceptionYear>
 
 	<scm>
-		<connection>scm:svn:http://stickycode.googlecode.com/svn/trunk/net.stickycode.component/sticky-component-cxf</connection>
-		<developerConnection>scm:svn:https://stickycode.googlecode.com/svn/trunk/net.stickycode.component/sticky-component-cxf</developerConnection>
-		<url>http://code.google.com/p/stickycode/source/browse/#svn/trunk/net.stickycode.component/sticky-component-cxf</url>
+		<connection>scm:svn:http://stickycode.googlecode.com/svn/tags/net.stickycode.component/sticky-component-cxf-2.2</connection>
+		<developerConnection>scm:svn:https://stickycode.googlecode.com/svn/tags/net.stickycode.component/sticky-component-cxf-2.2</developerConnection>
+		<url>http://code.google.com/p/stickycode/source/browse/#svn/tags/net.stickycode.component/sticky-component-cxf-2.2</url>
 	</scm>
 
 	<dependencies>
@@ -36,7 +36,7 @@ monitoring, management and more</description>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
-			<version>[1.6.1]</version>
+			<version>[1.6.0]</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
