--- a/net.stickycode.examples.ws/sticky-helloworld-ws-deploy/pom.xml
+++ b/net.stickycode.examples.ws/sticky-helloworld-ws-deploy/pom.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -9,8 +12,8 @@
 		<version>1.9</version>
 	</parent>
 
-	<groupId>net.stickycode.examples.ws</groupId>
-	<artifactId>sticky-helloworld-ws-deploy</artifactId>
+	<groupId>co.nfigured.exampls</groupId>
+	<artifactId>configured-example-guice3-ws-deploy</artifactId>
 	<version>1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -38,31 +41,16 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>net.stickycode.component</groupId>
-			<artifactId>sticky-component-cxf</artifactId>
-			<version>[2.1,3)</version>
+			<groupId>org.mockwire</groupId>
+			<artifactId>mockwire-guice3</artifactId>
+			<version>[1.3,2)</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>net.stickycode</groupId>
-			<artifactId>sticky-stereotype</artifactId>
-			<version>[1.5,2)</version>
-		</dependency>
-		<dependency>
-			<groupId>net.stickycode.composite</groupId>
-			<artifactId>sticky-composite-logging-deploy</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<dependency>
-			<groupId>net.stickycode.mockwire</groupId>
-			<artifactId>mockwire-spring30</artifactId>
-			<version>[4.2,5)</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.stickycode.configured</groupId>
-			<artifactId>sticky-configured-spring30</artifactId>
-			<version>[2.5,3)</version>
+			<groupId>net.stickycode.scheduled</groupId>
+			<artifactId>sticky-scheduled-guice3</artifactId>
+			<version>[0,1)</version>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode.scheduled</groupId>
@@ -70,9 +58,27 @@
 			<version>[1,2)</version>
 		</dependency>
 		<dependency>
-			<groupId>net.stickycode.scheduled</groupId>
-			<artifactId>sticky-scheduled-spring30</artifactId>
-			<version>[1,2)</version>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-servlet</artifactId>
+			<version>3.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>net.stickycode.composite</groupId>
+			<artifactId>sticky-composite-logging-deploy</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>net.stickycode.component</groupId>
+			<artifactId>sticky-component-cxf-guice3</artifactId>
+			<version>[1.1,2)</version>
 		</dependency>
 	</dependencies>
 </project>
