--- a/trunk/net.stickycode.parent/sticky-root/pom.xml
+++ b/trunk/net.stickycode.parent/sticky-root/pom.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (c) 2011 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!-- Copyright (c) 2011 RedEngine Ltd, http://www.redengine.co.nz. All rights 
+	reserved. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -65,9 +67,9 @@
 	</developers>
 
 	<build>
-		<directory>${basedir}/${target.dir}</directory>
-		<outputDirectory>${basedir}/${target.dir}/classes</outputDirectory>
-		<testOutputDirectory>${basedir}/${target.dir}/test-classes</testOutputDirectory>
+		<directory>${output.basedir}/${target.dir}</directory>
+		<outputDirectory>${output.basedir}/${target.dir}/classes</outputDirectory>
+		<testOutputDirectory>${output.basedir}/${target.dir}/test-classes</testOutputDirectory>
 
 		<pluginManagement>
 			<plugins>
@@ -97,13 +99,14 @@ version=1
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
-					<version>2.1</version>
+					<version>2.2.1</version>
 					<configuration>
 						<tagBase>https://stickycode.googlecode.com/svn/tags/${project.groupId}</tagBase>
 						<goals>enforcer:enforce deploy</goals>
 						<preparationGoals>enforcer:enforce clean verify</preparationGoals>
 
-						<!-- Remote tagging is just a dumb idea it violates the whole point of tagging a known quantity -->
+						<!-- Remote tagging is just a dumb idea it violates the whole point 
+							of tagging a known quantity -->
 						<remoteTagging>false</remoteTagging>
 						<suppressCommitBeforeTag>true</suppressCommitBeforeTag>
 
@@ -125,7 +128,7 @@ version=1
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>2.2</version>
+					<version>2.3</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -145,7 +148,7 @@ version=1
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.6</version>
+					<version>2.7</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -161,14 +164,16 @@ version=1
 					<configuration>
 						<rules>
 							<requireReleaseDeps>
-								<message>No SNAPSHOTs allowed in depedency tree or parents allowed when releasing!</message>
+								<message>No SNAPSHOTs allowed in depedency tree or parents
+									allowed when releasing!</message>
 								<failWhenParentIsSnapshot>true</failWhenParentIsSnapshot>
 								<searchTransitive>true</searchTransitive>
 							</requireReleaseDeps>
 
 							<!-- Don't allow accidental inclusion of commons logging or log4j -->
 							<bannedDependencies>
-								<message>Please ensure you exclude all dependencies on logging implementations</message>
+								<message>Please ensure you exclude all dependencies on logging
+									implementations</message>
 								<excludes>
 									<exclude>commons-logging</exclude>
 									<exclude>commons-logging-api</exclude>
@@ -196,24 +201,41 @@ version=1
 	</build>
 
 	<properties>
-		<!--
-			Because UTF-8 is nice but not everywhere, it causes problems with different editors and windows editors in particular wanting
-			to put BOM's in when UTF-8 should NOT have them.
-		-->
-		<!--
-			Appropriate encodings for other characters can be used that will be rendered properly at the UI layer. e.g. #&x123; for the dagger
-			character in an html source file will be rendered fine in the browser.
-		-->
+		<!-- Because UTF-8 is nice but not everywhere, it causes problems with 
+			different editors and windows editors in particular wanting to put BOM's 
+			in when UTF-8 should NOT have them. -->
+		<!-- Appropriate encodings for other characters can be used that will be 
+			rendered properly at the UI layer. e.g. #&x123; for the dagger character 
+			in an html source file will be rendered fine in the browser. -->
 		<project.build.sourceEncoding>US-ASCII</project.build.sourceEncoding>
 		<target.dir>target</target.dir>
+		<output.basedir>${basedir}</output.basedir>
 	</properties>
 
 	<profiles>
 		<profile>
-			<!-- Make sure eclipse outputs to a different directory otherwise the builders will clash with command line. -->
+			<!-- Make sure eclipse outputs to a different directory otherwise the 
+				builders will clash with command line. -->
 			<id>running-in-eclipse</id>
+			<activation>
+				<property>
+					<name>m2e.version</name>
+				</property>
+			</activation>
 			<properties>
 				<target.dir>target-eclipse</target.dir>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>running-on-linux</id>
+			<activation>
+				<os>
+					<family>unix</family>
+				</os>
+			</activation>
+			<properties>
+				<output.basedir>/tmp/maven/${project.groupId}/${project.artifactId}</output.basedir>
 			</properties>
 		</profile>
 
@@ -230,7 +252,7 @@ version=1
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.3</version>
+						<version>1.4</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
