--- a/net.stickycode.parent/sticky-root/pom.xml
+++ b/net.stickycode.parent/sticky-root/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright (c) 2011 RedEngine Ltd, http://www.redengine.co.nz. All rights 
 	reserved. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -227,14 +228,14 @@ version=1
 		</profile>
 
 		<profile>
-			<id>running-on-linux</id>
+			<id>using-ramdisk</id>
 			<activation>
-				<os>
-					<family>unix</family>
-				</os>
+				<property>
+					<name>ramdisk.path</name>
+				</property>
 			</activation>
 			<properties>
-				<output.basedir>/tmp/maven/${project.groupId}/${project.artifactId}</output.basedir>
+				<output.basedir>${ramdisk.path}/${project.groupId}/${project.artifactId}</output.basedir>
 			</properties>
 		</profile>
 
