--- a/trunk/net.stickycode/sticky-resource/pom.xml
+++ b/trunk/net.stickycode/sticky-resource/pom.xml
@@ -43,5 +43,10 @@
 			<artifactId>sticky-exception</artifactId>
 			<version>[1.3,2)</version>
 		</dependency>
+		<dependency>
+			<groupId>net.stickycode.composite</groupId>
+			<artifactId>sticky-composite-logging-api</artifactId>
+			<version>[1.1,2)</version>
+		</dependency>
 	</dependencies>
 </project>
